--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -965,7 +965,8 @@
                 </div>
 
                 <div ID="datepanel" class="panel">
-                    <h2 class="h2title">(Solar Wind) Driver Lookup</h2>
+                    <h2 class="h2title">Date and Time</h2>
+		    <p>Entering a date will also look up the drivers for that date</p>
                     <p>Y-M-D H:M</p>
                     <input type="text" name="year" value="2000" size="4" class="dateinput"><span>-</span>
                     <input type="text" name="month" value="06" size="2" class="dateinput"><span>-</span>
