--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -207,9 +207,9 @@
                 //if (lat_in) { $("#latinput").attr('disabled',true) } else { $("#latinput").removeAttr('disabled') } 
                 //if (lon_in) { $("#loninput").attr('disabled',true) } else { $("#loninput").removeAttr('disabled') }
                 //if (alt_in) { $("#altinput").attr('disabled',true) } else { $("#altinput").removeAttr('disabled') }
-                if (lat_in) { $("#latinputlbl").hide() } else { $("#latinput").show() } 
-                if (lon_in) { $("#loninputlbl").hide() } else { $("#loninput").show() }
-                if (alt_in) { $("#altinputlbl").hide() } else { $("#altinput").show() }
+                if (lat_in) { $("#latinputlbl").hide() } else { $("#latinputlbl").show() } 
+                if (lon_in) { $("#loninputlbl").hide() } else { $("#loninputlbl").show() }
+                if (alt_in) { $("#altinputlbl").hide() } else { $("#altinputlbl").show() }
     
                         
                 def.resolve()
