Max and min seperate for limits, more title attributes

--- a/www/login.html
+++ b/www/login.html
@@ -38,7 +38,7 @@
 
 	    <div ID = "login" class="panel">
 	        <h2 ID = "greeting">Hi, and welcome to AtModweb</h2>
-	        <p> To use atmodweb, you will need to provide a username. This way, I'll be able to keep track of your plots, and keep them seperate from those of other people who might be using this website. You won't need a password, and I'll remember what you've plotted for about an hour. If you want to keep your plots for longer than that, please right-click and save them, otherwise, they may not be here when you get back!
+	        <p> To use atmodweb, you will need to provide a username. You won't need a password, and I'll remember what you've plotted for about an hour. If you want to keep your plots for longer than that, please right-click and select "Save as..." to save the plot as an image file.
 	        </p>
     		<label ID = 'username_label'>Username:
 	        	<input ID = 'username_input' type='text' name='username'> 
