Added solar activity bar graph header

--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -66,6 +66,7 @@
                 </div>
 
                 <div ID="driverchart" class="panel chart">
+                    <h2 class="h2title">Solar Activity Bar Graph</h2>
 
                 </div>
 
