--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -1,6 +1,6 @@
     <!DOCTYPE html>
     <html>
-   <head>
+    <head>
     <meta charset="utf-8" />
     <link href="www/atmodweb.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'> 
@@ -10,7 +10,7 @@
     </head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="www/atmodweb.js"></script>
 
     <body>
