Added download graph button

--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -170,6 +170,7 @@
                         <div ID="plot_right_controls">
                             <button ID="autoscalebutton" class="plotcontrols"> Autoscale Graph</button>
                             <button ID="databutton" class="plotcontrols">Download Data</button>
+                            <button ID="graphbutton" class="plotcontrols">Download Plot</button>
                         </div>
 
                         <div ID="plot_progress"><div ID="plot_progress_label">Running Model...</div></div>
