--- a/www/login.html
+++ b/www/login.html
@@ -14,10 +14,8 @@
     	return re.test(email);
 		}
 
-		if (Date.now() < Date.parse("12 25 2015")) {
-			/* Animate a welcome message for AGU */
-			$('#agu_div').slideDown(2000);
-		}
+		$('#agu_div').slideDown(2000);
+
 		
 		authuser = function(e) {
 			var un = $('#username_input').val()
@@ -55,7 +53,13 @@
 
 	    <div ID = "login" class="panel">
 	  		<div ID = "agu_div">
-	    		<h1 ID = "aug_title">Welcome <a style="color: #122F5E; font-size:largest;" href="https://agu.confex.com/agu/fm15/meetingapp.cgi/Paper/68486">AGU Fall Meeting 2015</a> Attendees!</h1>
+	    		<h1>To Dr. Knipp's Space Environment Students:</h1>
+	    		<p><strong>I am actively working on AtModWeb to address your concerns. This may cause the server to go down for a minute or two when I apply an update. Just log back in if you get disconnected or check back in a minute if the server is down. I apologize for the inconvenience!</strong>
+	    		</p>
+	    		<p> I've tested most in <a href=https://www.mozilla.org/en-US/firefox/new/>Firefox</a>, so if in doubt, use that browser.</p>
+	    		<p> If you find more bugs, especially browser difference problems, it would really help me if you could report them along with the browser you are using. <strong>My contact info was/will be shared in class on Thursday 02/04/2016.</strong>
+	    		<p>If you have a github account you can add a <a href=https://github.com/lkilcommons/atmodweb/issues>new issue</a> to the bug tracker.</p>
+	    		<p>-the developer</p>
 	    	</div>
 	        <h1 class="h1title"> Welcome to AtModWeb! </h1>
 	        <p class="login"> To use atmodweb, you will need to provide a username and an email address.</p>
