Added new login message

--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -26,7 +26,7 @@
                 <span> Logged in as: <strong ID="username"></strong><a href="/login"> (Not you?) </a></span>
                 <button ID="restart" class="control" title="Bugs? App frozen? Click here to restart the application.">Restart</button>
                 <button ID="logout" class="control" title="Click here to log out of the application">Log Out</button>
-                <button ID="help" class="control" title="Click here to to the see descriptions of what every control does">Help</button>
+                <button ID="help" class="control" title="Go to documentation for AtModWeb">Help</button>
             </div>
         </div>
 
