Changed bounds focus callback to update both max and min. New jQuery CDN

--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -8,7 +8,7 @@
     
     <title>AtModWeb</title>
     </head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>    
     <script src="www/atmodweb.js"></script>
