Debugging hide/show

--- a/www/atmodweb.html
+++ b/www/atmodweb.html
@@ -146,7 +146,7 @@
                             <option value="null">Choose a color variable...</option>
                         </select>
 
-                        <label ID="zvar_label" class="zvar">Logscale:             
+                        <label ID="zlog_label" class="zvar">Logscale:             
                             <input ID="zlog" type="checkbox" name="zlog" class="var zvar log">
                         </label>
 
