Stripped out pcolor and models other than MSIS

--- a/www/login.html
+++ b/www/login.html
@@ -14,7 +14,7 @@
     	return re.test(email);
 		}
 
-		$('#agu_div').slideDown(2000);
+		//$('#agu_div').slideDown(2000);
 
 		
 		authuser = function(e) {
@@ -90,8 +90,9 @@
 
 	        </div>
 	        <div ID='important_div' class="login">
-	        <strong>IMPORTANT</strong>: AtModWeb only stores your work for one hour.
-	        If want to keep your plots for longer than that, please <em>right-click on the plot and select "Save as..."</em> to save the plot as an image file.</div>
+		        <strong>IMPORTANT</strong>: AtModWeb only stores your work for one hour.
+		        If want to keep your plots for longer than that, please <em>right-click on the plot and select "Save as..."</em> to save the plot as an image file.
+	        </div>
 	    </div>
     </body>
 </html>
